deploy/template.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: forgestatus-dashboard
  namespace: ${ENV}
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: forgestatus-dashboard
    spec:
      containers:
      - name: forgestatus-dashboard
        image: gcr.io/forgestatus/forgestatus-dashboard:${CIRCLE_SHA1}
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 10
