deploy/template.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgestatus-dashboard-service
namespace: ${ENV}
spec:
  type: NodePort
  selector:
    app: forgestatus-dashboard
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
