deploy/template.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: forgestatus-ingress-${ENV}
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ${ENV}-forgestatus
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: forgestatus-dashboard-service-${ENV}
          servicePort: 80
      - path: /server/*
        backend:
          serviceName: forgestatus-server-service-${ENV}
          servicePort: 80
      - path: /worker1/*
        backend:
          serviceName: forgestatus-worker-1-service-${ENV}
          servicePort: 80
      - path: /worker2/*
        backend:
          serviceName: forgestatus-worker-2-service-${ENV}
          servicePort: 80
      - path: /worker3/*
        backend:
          serviceName: forgestatus-worker-3-service-${ENV}
          servicePort: 80
